# ai-responder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
chat/: admin.py  completion.py  guards.py  message.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0003_thread_message.py  0004_chatbot_model.py  0005_field.py  0006_chatbot_base_url.py  0007_chatbot_functions.py  0008_message_tools.py  0009_chatbot_description.py
chat/static/: form_script.js  style.css  utils.js
chat/templates/: base.html  manage.html
context/: admin.py  embeddings.py  models.py  search.py  serializers.py  tasks.py  urls.py  views.py
context/migrations/: 0001_initial.py  0002_initial.py  0003_collection_use_openai.py  0004_document_content_hash.py  0005_alter_document_page.py  0006_documentmeta_file_document_file.py  0007_document_stale.py  0008_collection_name.py  0009_collection_require_auth.py
context/static/: search.js
core/: celery.py  context_processors.py  settings.py  urls.py
crawler/: admin.py  crawling.py  models.py  tasks.py  tests.py  url_tools.py
crawler/data/: params.csv
crawler/migrations/: 0001_initial.py  0002_alter_page_last_fetched.py  0003_alter_crawlconfig_last_fetched.py  0004_page_error.py  0005_crawlconfig_exclude_paths.py  0006_crawlconfig_arguments.py  0007_page_crawler_pag_url_243307_idx.py  0008_remove_page_crawler_pag_url_243307_idx_and_more.py  0009_crawlconfig_include_paths.py  0010_page_stale.py  0011_crawlconfig_timeout.py  0012_crawlconfig_stale.py  0013_remove_crawlconfig_stale.py  0014_page_published_at.py  0015_proxy_crawlconfig_proxy.py
insights/: forms.py  serializers.py  urls.py  views.py
insights/static/: message_detail.js  overview.js  thread_detail.js
(+16 files in other folders)
